infra/sources/deployment.yaml
apiVersion: extensions/v1beta1 
kind: Deployment 
metadata:
  name: __NAME__
  namespace: websites 
  labels:
    application: __NAME__
spec:
  replicas: 2
  selector:
    matchLabels:
      application: __NAME__
  template:
    metadata:
      labels:
        application: __NAME__
    spec:
      containers:
        - name: __NAME__
          image: __IMAGE__
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regsecret
