infra/sources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: __NAME__
  namespace: websites
  annotations:
    kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - __NAME__.cluster.dbogatov.org
    secretName: default/lets-encrypt
  rules:
  - host: "__NAME__.cluster.dbogatov.org"
    http:
      paths:
      - path: /
        backend:
          serviceName: __NAME__
          servicePort: 80
